ReviewForce/force-app/main/default/objects/Review__c/fields/Ambiance__c.field-meta.xml
<CustomField>
    <fullName>Ambiance__c</fullName>
    <label>Ambiance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>