ReviewForce/force-app/main/default/objects/Review__c/fields/Food_Quality__c.field-meta.xml
<CustomField>
    <fullName>Food_Quality__c</fullName>
    <label>Food Quality</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>