ReviewForce/force-app/main/default/objects/Review__c/fields/Music_Quality__c.field-meta.xml
<CustomField>
    <fullName>Music_Quality__c</fullName>
    <label>Music Quality</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>