ReviewForce/force-app/main/default/objects/Review__c/fields/Value_For_Money__c.field-meta.xml
<CustomField>
    <fullName>Value_For_Money__c</fullName>
    <inlineHelpText>Calculated based on Price Point compared to Overall Score</inlineHelpText>
    <label>Value For Money</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>