ReviewForce/force-app/main/default/objects/Review__c/fields/Visit_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Start_Date__c</fullName>
    <label>Visit Start Date</label>
    <type>Date</type>
</CustomField>