ReviewForce/force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ambiance__c</columns>
    <columns>Service_Quality__c</columns>
    <columns>Food_Quality__c</columns>
    <columns>Value_For_Money__c</columns>
    <columns>Music_Quality__c</columns>
    <columns>Visit_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>